gui and login fixes
gui and login fixes